# corsair

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INTEGRATIONS.md  LESSONS.md  LICENSE  README.md  SECURITY.md  color-palette.md  docker-compose.yml  first-instruction.md  version.json
.github/: CODEOWNERS  (+1 more)
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  log_handler.py  main.py
backend/app/agent/: analysis.py  cost.py  prompts.py  runner.py  workspace.py
backend/app/api/v1/: __init__.py  agent.py  dashboard.py  datadog.py  jira.py  logs.py  settings.py  tasks.py  webhooks.py
backend/app/integrations/: README.md  registry.py
backend/app/integrations/datadog/: analyzer.py  client.py
backend/app/integrations/datadog/tests/: conftest.py  test_datadog.py
backend/app/integrations/github/: client.py
backend/app/integrations/jira/: adf.py  client.py  sync.py
backend/app/integrations/slack/: bot.py
backend/app/models/: __init__.py  agent_log.py  agent_run.py  conversation.py  datadog_analysis.py  internal_log.py  setting.py  setting_history.py  task.py
backend/app/websocket/: manager.py
backend/migrations/: 003_settings.sql  005_workspace_fields.sql  007_task_plan.sql  008_setting_history.sql  009_task_analysis.sql
backend/migrations/models/: 0_20260301144450_init.py
backend/tests/: conftest.py  test_agent.py  test_analysis.py  test_api.py  test_auth.py  test_jira_sync.py  test_log_handler.py  test_models.py  test_settings.py  test_workspace.py
infra/: nginx.conf  (+1 more)
(+73 files in other folders)
